objects/Barclays_SA__DSA_App_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Barclays_SA__Application_Name__c</fullName>
        <label>Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barclays_SA__Application_Version__c</fullName>
        <label>Application Version</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barclays_SA__Content_Workspace_Ids_Csv__c</fullName>
        <label>Content Library IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barclays_SA__Non_User_Tags_Regex__c</fullName>
        <label>Non-User Tags Regex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barclays_SA__Package_Name__c</fullName>
        <inlineHelpText>This is the package namespace of the DSA app.</inlineHelpText>
        <label>Package Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barclays_SA__Preferred_Configuration__c</fullName>
        <label>Preferred Mobile App Configuration</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barclays_SA__Preferred_Language_Codes_Csv__c</fullName>
        <label>Preferred Language Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barclays_SA__Support_URL__c</fullName>
        <label>Support URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Application Setting</label>
</CustomObject>